added login feature and updated swagger.yaml for login
