# routes/user.js
@@ -2,8 +2,9 @@ const express = require("express");
 
 const router = express.Router();
 
-const { signup } = require("../controllers/userController");
+const { signup, login } = require("../controllers/userController");
 
 router.route("/signup").post(signup);
+router.route("/login").post(login);
 
 module.exports = router;
